--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www --exec \"npm run build-css\" -e js,hbs,scss",
+    "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css",
+    "node": "node ./bin/www"
+
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -14,5 +17,9 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "mongoose": "*"
+  },
+  "devDependencies": {
+    "node-sass": "^4.2.0",
+    "nodemon": "^1.11.0"
   }
 }
