--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build-css && node ./bin/www",
-    "nodemon": "nodemon ./bin/www --exec \"npm run build-css\" -e js,hbs,scss",
+    "gulp": "gulp",
+    "start": "nodemon start.js",
+    "watch-code": "nodemon start.js",
+    "watch-css": "nodemon start.js --exec \"npm run build-css\" -e scss",
     "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css",
-    "node": "node ./bin/www"
-
+    "node": "npm run build-css && node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -20,6 +21,11 @@
     "mongoose": "*"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^3.1.0",
     "node-sass": "^4.2.0",
     "nodemon": "^1.11.0"
   }
