--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "hbs": "~4.0.1",
+    "express-hbs": "*",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "mongoose": "*"
