add ingredients and async

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-hbs": "*",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "mongoose": "*"
+    "mongoose": "*",
+    "async": "*"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
